shellshock/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: ""
  name: vulnerable-httpd
spec:
  finalizers:
  - kubernetes
